vp/static/css/viceprice-map.css
/****************/
html, body, span, h1, h2, h3, h4, h5, h6, em, img, ol, ul, li {
  font-family:"Montserrat", Arial, sans-serif !important;
  margin:0;
  padding:0;
  border:0;
  font:inherit;
  vertical-align:baseline;
}

/* Leftside bar*/
.left-side-bar  { 
    position:fixed;
    float:left; 
    width:16.6666%; 
    height: 100%; 
    background-color:rgb(35, 40, 43); 
    top:0; 
    bottom:0; 
    left:0;
}

.search-div, .hours-div,.legend-div{
  display:block;
  padding-left:10%;
  position:relative;
}

.legends-div{
  display:block;
  padding-left:10%;
  position:relative;
  color:#c8a45e;
}

.about-div{
  display:block;
  position:relative;
  color:#c8a45e;
  padding-left:10%;
}

.abouttext-div{
  display:block;
  position:relative;
  color:#c8a45e;
}
.legend-images {
    text-align: center
}

.logo {
  text-align: center;
  padding-top: 15%;
  font-size:90%;
  color:#ecf2f5;
  margin-bottom: 5%;
  font-family:"Montserrat", Arial, sans-serif;
}
 .vp {
  font-size:300%;
  color:#c8a45e;
  padding-bottom: 5%;
  text-align: center;
 }

 .beta{
  text-align: center;
  font-size:100%;
  color:#c8a45e;
 }
 

#search input[type="text"] {
    background-color:transparent;
    border: 0 none;
    font-size:50%;
    color:#7d7f80;
    width: 70%;
    padding: 5% 5%;
}

.legend-img{
  vertical-align: top;
  display: inline-block;
  text-align: center;
  margin: .5rem .5rem .5rem .5rem;
}

.caption {
  display: block;
  font-size:90%;
  color:#ecf2f5;
}

 .left-side-bar p{
  width:90%;
  font-size:100%;
  color:#e8ecef;
  margin-bottom: 5%;
  border-bottom: 1px solid #7d7f80;
 }

.about-contact-us {
    position: absolute;
    bottom: 0.5rem;
    text-align: center;
}

.contact-us {
    position: fixed; 
    bottom: 0px;
}

.attribution{text-align: right;display: inline-block;margin-left: 1rem}

.attribution a {padding-left:0;}

a {font-size:70%; padding-left:0.5rem;}
a:link, a:visited    {color:#ecf2f5; background-color:transparent;text-decoration: none;}
a:hover {color:#eaeaea; background-color:transparent; text-decoration: none;}

.zooming-bar { padding: 0.1rem 0; position: fixed; bottom: 2.5rem; left:16.6666%; background-color: #c8a45e; width: 22px; }
.zooming-bar li{ list-style-type: none;text-align: center;}
.zooming-bar img{width:20px;height:20px;margin-top:15%;cursor: pointer;}

#overview-zoom {
    position: fixed;
    left: 16.66%;
    bottom: 0.5rem;
    font-size: 0.8rem;
    padding: 0.1rem 0.4rem;
    background-color: #c8a45e;
    cursor: pointer;
}

/* Rightside bar*/
.right-side-bar {display:none;position:absolute; float:left; width:25.0000%; background-color:#fbfbfb;opacity:0.98; top:0; right:0;  }
.right-side-bar { height: 100%; overflow: scroll; }
.sliding { position: fixed; float:right; width: 17px;background-color: #c8a45e;top:0; bottom:0;right:0;cursor: pointer;}

.deals-div, .location-details-div, .reviews-div {
  display:block;
  width:90%;
  margin-left: 1rem;
  padding: 0.5rem 0;
  position: relative;
}

.reviews-div {
    cursor: pointer;
}

.reviews-div:hover {
    background-color: #f2e7d5;
}

.deals-div, .location-details-div {
  border-bottom:1px solid #cacaca;
}

.location-details-div {
  padding: 1rem 0;
}

.right-side-bar h1{
  font-size:120%;
  font-weight: bold;
}

.right-side-bar #location-name {
  margin: 0 0 0 1rem;
}

.right-side-bar #venue-category {
  padding-bottom: 0.5rem;
  border-bottom: 2px solid #c8a45e;
  margin: 0 1rem 0 1rem;
}

.right-side-bar #deal-time-frame {
  color: #c8a45e;
  margin-top: 0;
}

.right-side-bar h2{
  display: inline-block;
  vertical-align: top;
  width: 70%;
  color: #5b5b5b;
  margin-top: 0;
  margin-bottom: 0.2rem;
  height: 1rem;
  font-size: 0.8rem;
}

.right-side-bar h3{
  font-size:70%;
  color:#aeaeae;
  display: inline;
}

.right-side-bar h4{
  font-size:70%;
  color:#5b5b5b;
  display: inline;
}

.right-side-bar p{
  font-size: 0.75rem;
  color:#7d7f80;
  }

.right-side-bar .category {
    color: #5b5b5b;
    display: inline-block;
}

#deal-details-div table {
    margin-top: 1rem;
}

.drink-category-column {
    vertical-align: top;
    width: 30px;
}

.drink-category-column img {
    width: 30px;
    padding-bottom: 0.5rem;
}

.deal-detail-column {
    vertical-align: top;
    color: #7d7f80;
    font-size: 0.75rem;
}

.deal-detail-column li {
    padding-bottom: 0.3rem;
}

.location-details-div i {
  font-size: 1rem;
  color: #c8a45e;
}

.location-detail {
  height: 1.4rem;
  overflow: hidden;
  padding: 0.3rem 0;
}

#location-address, #location-phone-number, #location-website {
  font-size: 0.75rem;
  color: #7d7f80;
  position: relative;
  bottom: 0.1rem;
  left: 0.3rem;
  padding-left: 0;
}

a#location-website {
color: #7d7f80;
cursor: pointer;
}

#drink_type{
  color: #7d7f80;
  font-size: 0.9rem;
  display: inline-block;
  vertical-align: top;
}

.review-summary-container {
    display: flex;
    align-items: flex-end;
    justify-content: space-between;
}

#review_count {
    font-size: 0.75rem;
    color: #7d7f80;
}

#profile_img{
  display: inline-block;
  float: left;
  vertical-align: top;
  width:50px;
  height: 50px;
  margin: 0 1rem 0 0;
}

#name {
  margin-top: 1rem;
  margin-bottom: 0;
  color: #c8a45e;
}

#more-reviews {
    color: #c8a45e;
    text-align: right;
    width: 100%;
}


/**CLUSTERS COLORS**/
.marker-cluster-small,
.marker-cluster-medium,
.marker-cluster-large{
  /*background-color: rgba(181, 226, 140, 0.6);*/
  background-color:rgba(222, 204, 161,0.6);

  }

.marker-cluster-small div,
.marker-cluster-medium div ,
.marker-cluster-large div  {
  /*background-color: rgba(110, 204, 57, 0.6);*/
  background-color:rgba(200, 164, 57,0.6);
  }

  /* IE 6-8 fallback colors */
.leaflet-oldie .marker-cluster-small, .leaflet-oldie .marker-cluster-medium, .leaflet-oldie .marker-cluster-large  {
  background-color: rgb(181, 226, 140);
  }
/* ... */

